--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           # Name of the artifact to download. If unspecified, all artifacts for the run are downloaded.
           name: Build
           # Destination path. Supports basic tilde expansion. Defaults to $GITHUB_WORKSPACE
-          #path: build
+          path: /home/runner/work/Chill-Devs-Chill-Jam-6/Chill-Devs-Chill-Jam-6
 
       # Publish to Itch.io
       - uses: manleydev/butler-publish-itchio-action@v1.0.3
@@ -52,6 +52,6 @@ jobs:
           CHANNEL: HTML
           ITCH_GAME: chill-devs-chill-jam-6-untitled
           ITCH_USER: lrdazrl
-          PACKAGE: build/Build
+          PACKAGE: /home/runner/work/Chill-Devs-Chill-Jam-6/Chill-Devs-Chill-Jam-6/Build
 
     
